errors
mainwindow.cpp: In constructor ‘MainWindow::MainWindow(QWidget*)’:
mainwindow.cpp:29:63: error: ‘updateADCReading’ is not a member of ‘MainWindow’
   29 |   connect(updateTimer, &QTimer::timeout, this, &MainWindow::updateADCReading);
      |                                                             ^~~~~~~~~~~~~~~~

mainwindow.cpp: At global scope:
mainwindow.cpp:71:6: error: no declaration matches ‘void MainWindow::updateADCReading()’
   71 | void MainWindow::updateADCReading() {
      |      ^~~~~~~~~~
mainwindow.cpp:71:6: note: no functions named ‘void MainWindow::updateADCReading()’
In file included from mainwindow.cpp:1:
mainwindow.h:9:7: note: ‘class MainWindow’ defined here
    9 | class MainWindow : public QMainWindow {
      |       ^~~~~~~~~~
make: *** [makefile:37: mainwindow.o] Error 1
